# automate-microsoft-bookings

./: .env.example  .gitignore  README.md  booker.py  calendar_parser.py  date_utils.py  main.py  pyproject.toml  uv.toml
.github/workflows/: ci.yml
tests/: test_booker.py  test_calendar_parser.py  test_date_utils.py  test_main.py
